--- a/GoogleMeetTab/css/styl.css
+++ b/GoogleMeetTab/css/styl.css
@@ -1,10 +1,13 @@
 :root{
     --gray-black:#102a42;
-    --cement-gray:#617d98;
+    --cement-gray:#618498;
     --purple:#551a8b;
-    --bg-button:#dae2ec;
+    --bg-button:#3f8ed7;
     --bg-color:#fbfbfb;
 
+}
+html{
+    font-size:16px ;
 }
 *,::after,::before{
     margin: 0;
@@ -24,7 +27,7 @@ img{
     display: block;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     background-color: var(--bg-color);
 }
 .wraper{
@@ -38,6 +41,8 @@ body{
 }
 .google-tab-container{
     width:100%;
+    padding-top: 30px;
+    padding-bottom: 50px;
 }
 .google-tab-section{
     display: flex;
@@ -50,15 +55,13 @@ body{
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 20px;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
-    padding-left: 40px;
-    padding-right: 40px;
 }
 .heading{
-    font-size: 40px;
+    width:100%;
+    font-size: 1.6rem;
     text-align: center;
     font-weight: bold;
     text-transform: capitalize;
@@ -67,10 +70,10 @@ body{
     color:var(--gray-black) ;
 }
 .heading-desc{
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 16px;
+    font-size: 1rem;
+    justify-self: center;
     text-align: center;
+    word-spacing: 0px;
     letter-spacing: 0px;
     color: var(--cement-gray);
 }
@@ -89,7 +92,8 @@ body{
     aspect-ratio: 350/300;
     overflow: hidden;
     position: relative;
-    border-radius: 2%;
+    border-radius: 23px;
+    background-color: black;
 }
 .img-container .bg-img img{
     width:100%;
@@ -110,13 +114,19 @@ body{
 @keyframes img-rotate {
     0%{
         transform: rotate(0deg);
+        transition: transform .3s linear;
+    }
+    50%{
+        transform: rotate(180deg);
+        transition: transform .3s linear;
     }
     100%{
         transform: rotate(365deg);
+        transition: transform .3s linear;
     }
 }
 .img-container:hover{
-    background-color: black;
+    background-color: rgb(196, 193, 193);
 }
 .google-tab{
     width:100%;
@@ -129,47 +139,68 @@ body{
     display: flex;
     flex-direction: row;
     row-gap: 20px;
+    border-radius: 3px;
+    padding: 2px;
 }
 .button{
     width:100%;
     height: 60px;
-    font-size: 16px;
+    font-size: 0.93rem;
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
     text-transform: capitalize;
-    color: black;
-    word-spacing: 2px;
-    letter-spacing: 2px;
-    border: none;
-    background-color: var(--bg-button);
+    color:var(--bg-button);
+    word-spacing: 0.33rem;
+    letter-spacing: 0.12rem;
+    cursor: pointer;
+    background-color: white;
+}
+.button:first-child{
+    border-right:none ;
+}
+.button:nth-child(2){
+    border-right:none ;
 }
 .button:hover{
-    background-color: white;
+    color:white ;
+    background-color: var(--bg-button);
     transition: all .3s linear;
 }
-.meeting-tab-details{
+.tab-details{
+    padding-left: 10px;
+    padding-right: 10px;
     width:100%;
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 15px;
 }
-.meeting-tab-details span{
-    font-size: 20px;
+.tab-details span{
+    font-family: 'Lobster', cursive;
+    font-size: 1.13rem;
     text-transform: capitalize;
     color: black;
-    word-spacing: 2px;
-    letter-spacing: 2px;
+    letter-spacing: 0.19rem;
 }
 .desc{
-    font-size: 16px;
+    margin-top: 20px;
+    font-size: 1.05rem;
+    line-height: 1.53;
+    font-family: 'Solitreo', cursive;
 }
-@media screen and (min-width:750px) {
+.contact{
+    display: none;
+}
+.support{
+    display: none;
+}
+@media screen and (min-width:450px) {
     .google-tab-content{
         display: flex;
         flex-direction: column;
         column-gap: 20px;
     }
     .img-container{
-        aspect-ratio:350/300;
+        aspect-ratio:450/300;
     }
 
 }
@@ -185,7 +216,7 @@ body{
         row-gap: 30px;
     }
     .heading{
-        font-size: 50px;
+        font-size: 3.5rem;
     }
     .google-tab-content{
         display: flex;
@@ -201,14 +232,14 @@ body{
         aspect-ratio:900/500;
         overflow: hidden;
         position: relative;
-        border-radius: 2%;
+        border-radius: 30px;
     }
     .img-container .bg-img img{
         width:100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
-        opacity: 0.8;
+        opacity: 0.9;
     }
     .google-tab{
         display: flex;
@@ -218,16 +249,16 @@ body{
         box-shadow: 0.9px 0.9px 50px rgb(255, 253, 253);
     }
     .button{
-        font-size: 20px;
+        font-size: 1.31rem;
     }
-    .meeting-tab-details{
+    .tab-details{
         width: 100%;
     }
-    .meeting-tab-details span{
-        font-size: 25px;
+    .tab-details span{
+        font-size:1.45rem;
         font-weight: bold;
     }
-    .meeting-tab-details .desc{
-        font-size: 20px;
+    .tab-details .desc{
+        font-size:1.24rem;
     }
 }
