--- a/ResponsiveNavbar/css/style.css
+++ b/ResponsiveNavbar/css/style.css
@@ -1,7 +1,9 @@
 :root{
-    --branding-name:cornflowerblue;
-    --text-shadow:#e9e519ea;
-    --nav-items:rgb(194, 127, 127);
+    --text-shadow:#0a0a0aea;
+    --nav-items:rgb(102, 80, 155);
+    --bisque:rgb(141, 180, 231);
+    --hover-effect:rgb(255, 255, 255);
+    --black:black;
 }
 *,::before,::after{
     margin:0px;
@@ -45,21 +47,92 @@ body{
 }
 .hambuger img{
     width:30px;
+    cursor: pointer;
 }
 .nav-branding .name{
-    color: var(--branding-name);
+    color: var(--black);
     font-size: 25px;
     text-align: center;
     text-transform: uppercase;
-    text-shadow: 0.6px 0.9px 4px var(--text-shadow);
+    text-shadow: 6px 2px 3px  dimgray;
 }
+/* mobile nav bar css start */
+.mobile-nav-container{
+    width:100%;
+    height: 350px;
+    position: relative;
+    top:0px;
+    left: 0px;
+    overflow: hidden;
+} 
+.mobile-nav-center{
+    width:100%;
+    background-color: var(--bisque);
+    position: absolute;
+    top:-360px;
+    left:0px;
+}
+.mobile-nav-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 30px;
+}
+.mobile-nav-menu-main{
+    margin-top: 30px;
+}
+.mobile-nav-menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+}
+.nav-menu-links{
+    font-size:30px;
+    font-weight: bold;
+    color: var(--nav-items);
+    text-transform: capitalize;
+    letter-spacing: 2px;
+}
+.mobile-nav-menu .nav-menu-links:hover{
+    color: var(--hover-effect);
+}
+.mobile-nav-social-main{
+    width:100%;
+}
+.mobile-nav-social-menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 20px;
+    margin-bottom: 30px;
+}
+.mobile-nav-social-links{
+    border: 3px var(--black) solid;
+    border-radius: 25%;
+    padding: 5px;
+    box-shadow: -5px -5px 3px 0px rgb(66, 88, 85);
+    cursor: pointer;
+}
+.mobile-nav-social-menu .mobile-nav-social-links:hover{
+    transform: scale(0.9);
+    transition: all .3s linear;
+    
+}
+/* mobile nav bar css end */
 @media screen  and (min-width:992px){
     .hambuger{
         display: none;
     }
+    .mobile-nav-container{
+        display: none;
+    }
     .nav-section-container{
         width:100%;
-        background-color: bisque;
+        background-color:var(--bisque);
     }
     .nav-section{
         width:100%;
@@ -67,6 +140,10 @@ body{
         display: grid;
         grid-template-columns: repeat(3,1fr);
         column-gap: 50px;
+    }
+    .nav-branding .name{
+        color: rgb(247, 247, 247);
+        text-shadow: 6px 2px 3px  var(--text-shadow);
     }
     .nav-menu{
         width:100%;
@@ -151,5 +228,6 @@ body{
    .nav-social-link:hover{
     transform: translateY(-5px);
     transition: all .3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    box-shadow: 0px 0px 4px 6px rgb(240, 241, 241);
     }
 }
