--- a/ResponsiveSidebar/css/style.css
+++ b/ResponsiveSidebar/css/style.css
@@ -19,36 +19,54 @@ a{
     text-decoration: none;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 img{
     display: block;
 }
+.wraper{
+    max-width: 1250px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .side-nav-container{
     width:100%;
-    position: fixed;
 }
 .side-nav-section{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column-reverse;
+    justify-content:right;
+    overflow: auto;
+}
+.hambuger{
+    padding: 10px 10px;
+    width:100%;
+    order: 2;
+    display: flex;
+    flex-direction: row-reverse;
 }
 .sidebar-section-container{
     width:100%;
-    height: 100vh;
-    order: -1;
-    overflow-y: scroll;
+    height:100%;
+    order: 1;
+    display: inline-flex;
+    overflow-y: auto;
+    overflow-x: hidden;
     box-shadow: 5px 5px 15px #b44ea7bb;
-    transition:all 0.1s linear;
-}
-.hambuger{
-    display: none;
+    transition:all 3s linear;
+    position: absolute;
+    top:0px;
+    left: -100%;
 }
 .sidebar-section-center{
     width:100%;
+    height: 100%;
+    overflow: auto;
     
 }
-.logo-name-section img{
-    width:30px;
+.logo-name-section a img{
+    width: 1.9rem;
+    justify-self: baseline;
 }
 .side-nav-links img{
     width: 30px;
@@ -59,24 +77,29 @@ img{
 .sidebar-section{
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-rows:10% 30% auto auto;
-    row-gap: 10px;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+    padding: 20px 20px;
 }
 .logo-name-section{
     width:100%;
-    height: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     padding: 10px 10px;
-    align-items: center;
 }
 .logo-name-section .name{
+    justify-self: baseline;
+    flex-shrink: 1;
+    flex-grow: 0;
     color: var(--name-blue);
     font-size: 29px;
     text-align: center;
     text-transform: uppercase;
-    text-shadow: 0.9px 0.9px 5px var(--shadow-white) ;
+    text-shadow: 0.9px 0.9px 5px aqua;
     letter-spacing: 2px;
 }
 .sidebar-img-container{
@@ -84,24 +107,27 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    
 }
 .img-component{
     width:250px;
     height: 250px;
-    border-radius: 50%;
+    border-radius: 25px;
     overflow: hidden;
 }
 .img-component img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 25px;
     object-position: center;
-    transform: translateX(-2px);
+    transform: scale(1.1);
+}
+.img-component:hover{
+    box-shadow: 0px 0px 5px 10px rgba(193, 146, 231, 0.863);
 }
 .img-component:hover img{
-    transform: scale(1.2);
+    transform: scale(1.3);
     transition: all 1s cubic-bezier(0.25, 0.46, 0.45, 1.14);
 }
 .side-nav-main{
@@ -150,11 +176,11 @@ img{
 .side-socail-link{
     width: 40px;
     height: 40px;
-    border: 1px solid;
+    border: 2px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 25%;
+    border-radius: 15px;
 }
 .side-socail-link img{
     width: 25px;
@@ -162,22 +188,24 @@ img{
 .side-socail-link:hover{
     transform: translateY(-5px);
     transition: all 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    box-shadow: 0.9px 0.9px 5px black;
+    box-shadow: 0.9px 0.9px 5px 3px rgb(51, 51, 51);
 }
 @media screen and (min-width:992px) {
     .margin-desktop-right-thirty{
         margin-right: 30px;
     }
     .sidebar-section-container{
-        width: 35%;
         transition:all 0.1s linear;
         overflow-x: hidden;
     }
-    .hambuger{
+    /* .hambuger{
         display: flex;
-    }
+    } */
     .side-socail-link img{
         width: 35px;
+    }
+    .side-social-links{
+        column-gap: 20px;
     }
     .side-socail-link{
         width: 50px;
